Part I - Introducing ANTLR and Computer Languages/Chapter 4/tour/Data/Data.g4
grammar Data;

file : group+ ;

group: INT sequence[$INT.int] ;

sequence[int n]
locals [int i = 1;]
     : ( {$i<=$n}? INT {$i++;} )* // match n integers
     ;

INT :   [0-9]+ ;
WS  :   [ \t\n\r]+ -> skip ;
